# ceres-test

./: CMakeLists.txt
ext/ceres/: ceres.cmake
ext/ceres/internal/ceres/: CMakeLists.txt
ext/ceres/internal/ceres/miniglog/glog/: logging.cc
ext/eigen/: eigen.cmake
